[add] .env config

--- a/api/.env
+++ b/api/.env
@@ -3,9 +3,9 @@ DEBUG=1
 HOST=0.0.0.0
 PORT=5000
 # DATABASE
-MYSQL_USER="root"
-MYSQL_PASSWORD="root"
-MYSQL_ROOT_PASSWORD="root"
+MYSQL_USER="softpymes"
+MYSQL_PASSWORD="softpymes"
+MYSQL_ROOT_PASSWORD="1110"
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_DATABASE=softpymes_test
